# model-templater

./: .gitmodules  README.md  app.py  pyproject.toml  template_cli.py  test_data.py  test_data.toml  tmp.py
templates/: mistral_large_2407_better.jinja
templates/theroyallab/: README.md
ui/: index.html  ui.css  ui.js
