[project]
name = "model-templater"
version = "0.1.0"
description = "Template-based model generation tool with real-time previews"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=2.0.0",
    "watchdog>=2.0.0",
    "Flask-SocketIO>=5.0.0",
    "Jinja2>=3.0.0",
    "python-dotenv>=0.15.0"
]
